# maestro

./: CLAUDE.md  README.md  executive-summary.md  package.json  skills-lock.json
media/: architecture.mmd
ml_service/: main.py  pyproject.toml
src/app/: DashboardClient.tsx
src/app/api/generate-solution/: route.ts
src/app/board/[id]/: BoardContent.tsx  page.tsx
src/components/: DecryptedText.jsx  GooeyNav.css  GooeyNav.jsx
src/components/ui/: CardSwap.tsx  ChromaGrid.tsx
src/features/ai/components/: AIChatSidebar.tsx  StatusIndicator.tsx
src/features/ai/hooks/: useCanvasSolver.ts
src/features/ai/prompts/: artist.txt
src/features/board/components/: BoardContent.tsx
src/features/board/hooks/: useLayers.ts
